Added contributer docs components to show missing language scopes

--- a/packages/cursorless-org-docs/src/docs/user/languages/csharp.mdx
+++ b/packages/cursorless-org-docs/src/docs/user/languages/csharp.mdx
@@ -6,4 +6,4 @@ import { Language } from "./components/Language";
 
 # C#
 
-<Language languageId="csharp"></Language>
+<Language languageId="csharp" />
