--- a/packages/cursorless-org-docs/src/docs/user/languages/javascript.mdx
+++ b/packages/cursorless-org-docs/src/docs/user/languages/javascript.mdx
@@ -2,4 +2,4 @@ import { Language } from "./components/Language";
 
 # Javascript
 
-<Language languageId="javascript"></Language>
+<Language languageId="javascript" />
