--- a/packages/cursorless-org-docs/src/docs/user/languages/json.mdx
+++ b/packages/cursorless-org-docs/src/docs/user/languages/json.mdx
@@ -2,4 +2,4 @@ import { Language } from "./components/Language";
 
 # JSON
 
-<Language languageId="json"></Language>
+<Language languageId="json" />
