--- a/packages/cursorless-org-docs/src/docs/user/languages/jsonc.mdx
+++ b/packages/cursorless-org-docs/src/docs/user/languages/jsonc.mdx
@@ -6,4 +6,4 @@ import { Language } from "./components/Language";
 
 # JSON with comments (JSONC)
 
-<Language languageId="jsonc"></Language>
+<Language languageId="jsonc" />
