--- a/packages/cursorless-org-docs/src/docs/user/languages/markdown.mdx
+++ b/packages/cursorless-org-docs/src/docs/user/languages/markdown.mdx
@@ -2,4 +2,4 @@ import { Language } from "./components/Language";
 
 # Markdown
 
-<Language languageId="markdown"></Language>
+<Language languageId="markdown" />
