--- a/packages/cursorless-org-docs/src/docs/user/languages/python.mdx
+++ b/packages/cursorless-org-docs/src/docs/user/languages/python.mdx
@@ -2,4 +2,4 @@ import { Language } from "./components/Language";
 
 # Python
 
-<Language languageId="python"></Language>
+<Language languageId="python" />
