--- a/packages/cursorless-org-docs/src/docs/user/languages/ruby.mdx
+++ b/packages/cursorless-org-docs/src/docs/user/languages/ruby.mdx
@@ -2,4 +2,4 @@ import { Language } from "./components/Language";
 
 # Ruby
 
-<Language languageId="ruby"></Language>
+<Language languageId="ruby" />
