--- a/packages/cursorless-org-docs/src/docs/user/languages/rust.mdx
+++ b/packages/cursorless-org-docs/src/docs/user/languages/rust.mdx
@@ -2,4 +2,4 @@ import { Language } from "./components/Language";
 
 # Rust
 
-<Language languageId="rust"></Language>
+<Language languageId="rust" />
