--- a/packages/cursorless-org-docs/src/docs/user/languages/scala.mdx
+++ b/packages/cursorless-org-docs/src/docs/user/languages/scala.mdx
@@ -2,4 +2,4 @@ import { Language } from "./components/Language";
 
 # Scala
 
-<Language languageId="scala"></Language>
+<Language languageId="scala" />
