--- a/packages/cursorless-org-docs/src/docs/user/languages/scm.mdx
+++ b/packages/cursorless-org-docs/src/docs/user/languages/scm.mdx
@@ -6,4 +6,4 @@ import { Language } from "./components/Language";
 
 # Tree sitter query language (scm)
 
-<Language languageId="scm"></Language>
+<Language languageId="scm" />
