--- a/packages/cursorless-org-docs/src/docs/user/languages/scss.mdx
+++ b/packages/cursorless-org-docs/src/docs/user/languages/scss.mdx
@@ -2,4 +2,4 @@ import { Language } from "./components/Language";
 
 # SCSS
 
-<Language languageId="scss"></Language>
+<Language languageId="scss" />
