--- a/packages/cursorless-org-docs/src/docs/user/languages/typescript.mdx
+++ b/packages/cursorless-org-docs/src/docs/user/languages/typescript.mdx
@@ -2,4 +2,4 @@ import { Language } from "./components/Language";
 
 # Typescript
 
-<Language languageId="typescript"></Language>
+<Language languageId="typescript" />
