--- a/packages/cursorless-org-docs/src/docs/user/languages/typescriptreact.mdx
+++ b/packages/cursorless-org-docs/src/docs/user/languages/typescriptreact.mdx
@@ -2,4 +2,4 @@ import { Language } from "./components/Language";
 
 # Typescript react
 
-<Language languageId="typescriptreact"></Language>
+<Language languageId="typescriptreact" />
