--- a/packages/cursorless-org-docs/src/docs/user/languages/clojure.mdx
+++ b/packages/cursorless-org-docs/src/docs/user/languages/clojure.mdx
@@ -2,4 +2,4 @@ import { Language } from "./components/Language";
 
 # Clojure
 
-<Language languageId="clojure"></Language>
+<Language languageId="clojure" />
