--- a/packages/cursorless-org-docs/src/docs/user/languages/dart.mdx
+++ b/packages/cursorless-org-docs/src/docs/user/languages/dart.mdx
@@ -2,4 +2,4 @@ import { Language } from "./components/Language";
 
 # Dart
 
-<Language languageId="dart"></Language>
+<Language languageId="dart" />
