--- a/packages/cursorless-org-docs/src/docs/user/languages/html.mdx
+++ b/packages/cursorless-org-docs/src/docs/user/languages/html.mdx
@@ -2,4 +2,4 @@ import { Language } from "./components/Language";
 
 # HTML
 
-<Language languageId="html"></Language>
+<Language languageId="html" />
