--- a/packages/cursorless-org-docs/src/docs/user/languages/java.mdx
+++ b/packages/cursorless-org-docs/src/docs/user/languages/java.mdx
@@ -2,4 +2,4 @@ import { Language } from "./components/Language";
 
 # Java
 
-<Language languageId="java"></Language>
+<Language languageId="java" />
