--- a/packages/cursorless-org-docs/src/docs/user/languages/javascriptreact.mdx
+++ b/packages/cursorless-org-docs/src/docs/user/languages/javascriptreact.mdx
@@ -2,4 +2,4 @@ import { Language } from "./components/Language";
 
 # Javascript react
 
-<Language languageId="javascriptreact"></Language>
+<Language languageId="javascriptreact" />
