--- a/packages/cursorless-org-docs/src/docs/user/languages/jsonl.mdx
+++ b/packages/cursorless-org-docs/src/docs/user/languages/jsonl.mdx
@@ -6,4 +6,4 @@ import { Language } from "./components/Language";
 
 # JSON lines (JSONL)
 
-<Language languageId="jsonl"></Language>
+<Language languageId="jsonl" />
