--- a/packages/cursorless-org-docs/src/docs/user/languages/latex.mdx
+++ b/packages/cursorless-org-docs/src/docs/user/languages/latex.mdx
@@ -2,4 +2,4 @@ import { Language } from "./components/Language";
 
 # Latex
 
-<Language languageId="latex"></Language>
+<Language languageId="latex" />
