--- a/packages/cursorless-org-docs/src/docs/user/languages/talon.mdx
+++ b/packages/cursorless-org-docs/src/docs/user/languages/talon.mdx
@@ -2,4 +2,4 @@ import { Language } from "./components/Language";
 
 # Talon
 
-<Language languageId="talon"></Language>
+<Language languageId="talon" />
