--- a/packages/cursorless-org-docs/src/docs/user/languages/yaml.mdx
+++ b/packages/cursorless-org-docs/src/docs/user/languages/yaml.mdx
@@ -2,4 +2,4 @@ import { Language } from "./components/Language";
 
 # Yaml
 
-<Language languageId="yaml"></Language>
+<Language languageId="yaml" />
