--- a/data/fixtures/recorded/languages/rust/changeTypeTrap.yml
+++ b/data/fixtures/recorded/languages/rust/changeTypeTrap.yml
@@ -26,8 +26,8 @@ initialState:
       end: {line: 0, character: 18}
 finalState:
   documentContents: |
-    fn some_function<T: , U: Clone + Debug>(t: &T, u: &U) -> i32 {
+    fn some_function<, U: Clone + Debug>(t: &T, u: &U) -> i32 {
     }
   selections:
-    - anchor: {line: 0, character: 20}
-      active: {line: 0, character: 20}
+    - anchor: {line: 0, character: 17}
+      active: {line: 0, character: 17}
