--- a/data/fixtures/recorded/languages/rust/changeArgSun.yml
+++ b/data/fixtures/recorded/languages/rust/changeArgSun.yml
@@ -1,14 +1,14 @@
 languageId: rust
 command:
   version: 6
-  spokenForm: change arg sun
+  spokenForm: change type sun
   action:
     name: clearAndSetSelection
     target:
       type: primitive
       modifiers:
         - type: containingScope
-          scopeType: {type: argumentOrParameter}
+          scopeType: {type: type}
       mark: {type: decoratedSymbol, symbolColor: default, character: s}
   usePrePhraseSnapshot: true
 initialState:
