--- a/data/fixtures/recorded/languages/rust/changeNameDrum2.yml
+++ b/data/fixtures/recorded/languages/rust/changeNameDrum2.yml
@@ -1,14 +1,14 @@
 languageId: rust
 command:
   version: 6
-  spokenForm: change name drum
+  spokenForm: change key drum
   action:
     name: clearAndSetSelection
     target:
       type: primitive
       modifiers:
         - type: containingScope
-          scopeType: {type: name}
+          scopeType: {type: collectionKey}
       mark: {type: decoratedSymbol, symbolColor: default, character: d}
   usePrePhraseSnapshot: true
 initialState:
