--- a/data/fixtures/recorded/languages/rust/chuckArgTrap.yml
+++ b/data/fixtures/recorded/languages/rust/chuckArgTrap.yml
@@ -1,14 +1,14 @@
 languageId: rust
 command:
   version: 6
-  spokenForm: chuck arg trap
+  spokenForm: chuck type trap
   action:
     name: remove
     target:
       type: primitive
       modifiers:
         - type: containingScope
-          scopeType: {type: argumentOrParameter}
+          scopeType: {type: type}
       mark: {type: decoratedSymbol, symbolColor: default, character: t}
   usePrePhraseSnapshot: true
 initialState:
