--- a/packages/cursorless-org-docs/src/docs/contributing/CONTRIBUTING.mdx
+++ b/packages/cursorless-org-docs/src/docs/contributing/CONTRIBUTING.mdx
@@ -139,9 +139,18 @@ vsce package -o bundle.vsix
 
 Once you have your package then you can install it into the sandbox using the following command:
 
-```
-code --profile=cursorlessDevelopment --install-extension bundle.vsix
-```
+   <Tabs groupId="vsx">
+      <TabItem value="vscode" label="VSCode">
+      ```bash
+      code --profile=cursorlessDevelopment --install-extension bundle.vsix
+      ```
+      </TabItem>
+      <TabItem value="vscodium" label="VSCodium">
+      ```bash
+      codium --profile=cursorlessDevelopment --install-extension bundle.vsix
+      ```
+      </TabItem>
+   </Tabs>
 
 ## Installing a local build of the Cursorless extension
 
