Pass cli tool name as param, update CONTRIBUTING.mdx

--- a/packages/cursorless-org-docs/src/docs/contributing/CONTRIBUTING.mdx
+++ b/packages/cursorless-org-docs/src/docs/contributing/CONTRIBUTING.mdx
@@ -12,7 +12,7 @@ Welcome! So glad you've decided to help make Cursorless better. You'll want to s
 - [Git](https://git-scm.com/)
 - [Node.js](https://nodejs.org/en/)
 - [Corepack](https://nodejs.org/api/corepack.html) or [pnpm](https://pnpm.io/installation)
-- [VSCode](https://code.visualstudio.com/) or [VSCodium](https://vscodium.com/); Please file an issue if you are unable to use [settings profiles](https://code.visualstudio.com/updates/v1_72#_settings-profiles), as they are required for the development environment.
+- [VSCode](https://code.visualstudio.com/) or [VSCodium](https://vscodium.com/)
 Both VSCode and VSCodium will be referred to as VSCode except when instructions differ between the editors.
 
 ### Steps
@@ -54,7 +54,7 @@ Don't fret if `pnpm compile` fails! While required for running tests locally on 
       </TabItem>
       <TabItem value="vscodium" label="VSCodium">
       ```bash
-      pnpm init-vscode-sandbox
+      pnpm init-vscode-sandbox --codium
       ```
       VSCodium users will also need to manually download and install the `jrieken:vscode-tree-sitter-query` extension, as it is [currently not avalible](https://github.com/jrieken/vscode-tree-sitter-query/issues/28) on the OpenVSX Marketplace.
       Instructions on how to manually download the extension can be found [in this Stack Overflow post](https://stackoverflow.com/a/79565372) ([archived](https://web.archive.org/web/20250421130639/https://stackoverflow.com/questions/79359919/how-can-i-manually-download-vsix-files-now-that-the-vs-code-marketplace-no-long/79565372#79565372)), while manual installation instructions can be found directly below—replace `some.extension` with the acquired `.vsix` file's path instead of an extension id.
