Added contribution scopes page to compare scopes between languages

--- a/packages/cursorless-org-docs/src/docs/user/languages/typescriptreact.mdx
+++ b/packages/cursorless-org-docs/src/docs/user/languages/typescriptreact.mdx
@@ -1,5 +1,5 @@
 import { Language } from "./components/Language";
 
-# Typescript react
+# TypeScript React
 
 <Language languageId="typescriptreact" />
