--- a/packages/cursorless-org-docs/src/docs/user/languages/javascriptreact.mdx
+++ b/packages/cursorless-org-docs/src/docs/user/languages/javascriptreact.mdx
@@ -1,5 +1,5 @@
 import { Language } from "./components/Language";
 
-# Javascript react
+# JavaScript React
 
 <Language languageId="javascriptreact" />
