Update language mdx titles

--- a/packages/cursorless-org-docs/src/docs/user/languages/plaintext.mdx
+++ b/packages/cursorless-org-docs/src/docs/user/languages/plaintext.mdx
@@ -1,5 +1,5 @@
 import { Language } from "./components/Language";
 
-# JavaScript
+# Plaintext
 
-<Language languageId="javascript" />
+<Language languageId="plaintext" />
