--- a/packages/cursorless-org-docs/src/docs/user/languages/scm.mdx
+++ b/packages/cursorless-org-docs/src/docs/user/languages/scm.mdx
@@ -4,6 +4,6 @@ sidebar_label: Tree sitter query
 
 import { Language } from "./components/Language";
 
-# Tree sitter query language (scm)
+# Tree sitter query (SCM)
 
 <Language languageId="scm" />
