--- a/data/fixtures/recorded/languages/cpp/clearAttribute.yml
+++ b/data/fixtures/recorded/languages/cpp/clearAttribute.yml
@@ -1,9 +1,9 @@
 languageId: cpp
 command:
   version: 6
-  spokenForm: take attribute
+  spokenForm: change attribute
   action:
-    name: setSelection
+    name: clearAndSetSelection
     target:
       type: primitive
       modifiers:
@@ -21,9 +21,9 @@ initialState:
   marks: {}
 finalState:
   documentContents: |
-    [[nodiscard]]
+    [[]]
     int f(int a = 1) {
     }
   selections:
-    - anchor: {line: 0, character: 0}
-      active: {line: 0, character: 13}
+    - anchor: {line: 0, character: 2}
+      active: {line: 0, character: 2}
