--- a/data/fixtures/recorded/languages/php/changeFunk3.yml
+++ b/data/fixtures/recorded/languages/php/changeFunk3.yml
@@ -22,10 +22,9 @@ initialState:
       active: {line: 3, character: 0}
   marks: {}
 finalState:
-  documentContents: |-
+  documentContents: |+
     <?php
 
-    ;
   selections:
     - anchor: {line: 2, character: 0}
       active: {line: 2, character: 0}
