--- a/data/fixtures/recorded/languages/php/changeFunk4.yml
+++ b/data/fixtures/recorded/languages/php/changeFunk4.yml
@@ -20,10 +20,10 @@ initialState:
       active: {line: 2, character: 24}
   marks: {}
 finalState:
-  documentContents: |
+  documentContents: |+
     <?php
 
-    ;
+
   selections:
     - anchor: {line: 2, character: 0}
       active: {line: 2, character: 0}
