--- a/data/fixtures/recorded/languages/php/chuckFunk2.yml
+++ b/data/fixtures/recorded/languages/php/chuckFunk2.yml
@@ -20,10 +20,8 @@ initialState:
       active: {line: 2, character: 24}
   marks: {}
 finalState:
-  documentContents: |+
+  documentContents: |
     <?php
-
-
   selections:
-    - anchor: {line: 2, character: 0}
-      active: {line: 2, character: 0}
+    - anchor: {line: 1, character: 0}
+      active: {line: 1, character: 0}
