--- a/packages/cursorless-org-docs/src/docs/contributing/CONTRIBUTING.mdx
+++ b/packages/cursorless-org-docs/src/docs/contributing/CONTRIBUTING.mdx
@@ -30,10 +30,10 @@ Welcome! So glad you've decided to help make Cursorless better. You'll want to s
 
    <Tabs groupId="vsx">
      <TabItem value="vscode" label="VSCode" default>
-       ```bash code --profile=cursorlessDevelopment ```
+       `bash code --profile=cursorlessDevelopment`
      </TabItem>
      <TabItem value="vscodium" label="VSCodium">
-       ```bash codium --profile=cursorlessDevelopment ```
+       `bash codium --profile=cursorlessDevelopment`
      </TabItem>
    </Tabs>
 
@@ -43,12 +43,12 @@ Welcome! So glad you've decided to help make Cursorless better. You'll want to s
 
    <Tabs groupId="vsx">
      <TabItem value="vscode" label="VSCode">
-       ```bash pnpm init-vscode-sandbox ```
+       ```bash pnpm init-vscode-sandbox```
      </TabItem>
      <TabItem value="vscodium" label="VSCodium">
-       ```bash pnpm init-vscode-sandbox --codium ``` VSCodium users will also
-       need to manually download and install the
-       `jrieken:vscode-tree-sitter-query` extension, as it is [currently not
+       `bash pnpm init-vscode-sandbox --codium` VSCodium users will also need to
+       manually download and install the `jrieken:vscode-tree-sitter-query`
+       extension, as it is [currently not
        avalible](https://github.com/jrieken/vscode-tree-sitter-query/issues/28)
        on the OpenVSX Marketplace. Instructions on how to manually download the
        extension can be found [in this Stack Overflow
@@ -64,12 +64,12 @@ Welcome! So glad you've decided to help make Cursorless better. You'll want to s
 
    <Tabs groupId="vsx">
      <TabItem value="vscode" label="VSCode">
-       ```bash code --profile=cursorlessDevelopment --install-extension
-       some.extension ```
+       `bash code --profile=cursorlessDevelopment --install-extension
+       some.extension`
      </TabItem>
      <TabItem value="vscodium" label="VSCodium">
-       ```bash codium --profile=cursorlessDevelopment --install-extension
-       some.extension ```
+       `bash codium --profile=cursorlessDevelopment --install-extension
+       some.extension`
      </TabItem>
    </Tabs>
 
@@ -136,16 +136,13 @@ vsce package -o bundle.vsix
 
 Once you have your package then you can install it into the sandbox using the following command:
 
-{" "}
-
 <Tabs groupId="vsx">
   <TabItem value="vscode" label="VSCode">
-    ```bash code --profile=cursorlessDevelopment --install-extension bundle.vsix
-    ```
+    `bash code --profile=cursorlessDevelopment --install-extension bundle.vsix`
   </TabItem>
   <TabItem value="vscodium" label="VSCodium">
-    ```bash codium --profile=cursorlessDevelopment --install-extension
-    bundle.vsix ```
+    `bash codium --profile=cursorlessDevelopment --install-extension
+    bundle.vsix`
   </TabItem>
 </Tabs>
 
