Remove unwanted new lines in code blocks

--- a/packages/cursorless-org-docs/src/docs/contributing/CONTRIBUTING.mdx
+++ b/packages/cursorless-org-docs/src/docs/contributing/CONTRIBUTING.mdx
@@ -75,14 +75,12 @@ Welcome! So glad you've decided to help make Cursorless better. You'll want to s
    <Tabs groupId="vsx">
      <TabItem value="vscode" label="VSCode">
        ```bash
-        code --profile=cursorlessDevelopment --install-extension
-        some.extension
+        code --profile=cursorlessDevelopment --install-extension some.extension
         ```
      </TabItem>
      <TabItem value="vscodium" label="VSCodium">
        ```bash
-        codium --profile=cursorlessDevelopment --install-extension
-        some.extension
+        codium --profile=cursorlessDevelopment --install-extension some.extension
         ```
      </TabItem>
    </Tabs>
@@ -158,8 +156,7 @@ Once you have your package then you can install it into the sandbox using the fo
   </TabItem>
   <TabItem value="vscodium" label="VSCodium">
     ```bash
-    codium --profile=cursorlessDevelopment --install-extension
-    bundle.vsix
+    codium --profile=cursorlessDevelopment --install-extension bundle.vsix
     ```
   </TabItem>
 </Tabs>
