Fix CONTRIBUTING.MDX formatting snafu introduced in PR 2989 (#3073)
From what I understand, the auto-formatting/prettifier plugin used by
Cursorless really didn't like how CONTRIBUTING.MDX needed to be
formatted to have the separation between vscode and vscodium specific
commands show properly, and as a result broke a bunch of the code
blocks, transforming them from
```bash
echo hello yes this is dog
```
to
`bash echo hello yes this is dog`
though ofc the commands were actual commands and not an echo example. I
forget if any other formatting was broken, it has been a while since I
actually finished the work on this and I just forgot to make a PR for
it, sorry (been busy with getting ready for the new semester, health
nonsense, and non-CS hobbies). This PR fixes the aforementioned issue
and excludes CONTRIBUTING.MDX from being processed by the
auto-formatting plugin, allowing it to contain all of the weird extended
markdown jank the plugin seems to really not like. If there's a more
elegant way to do this (changing the rules the plugin follows?) please
lmk and commit it if you have the time, this is very much not my usual
wheelhouse.

---------

Co-authored-by: Andreas Arvidsson <andreas.arvidsson87@gmail.com>

--- a/packages/cursorless-org-docs/src/docs/contributing/CONTRIBUTING.mdx
+++ b/packages/cursorless-org-docs/src/docs/contributing/CONTRIBUTING.mdx
@@ -30,10 +30,14 @@ Welcome! So glad you've decided to help make Cursorless better. You'll want to s
 
    <Tabs groupId="vsx">
      <TabItem value="vscode" label="VSCode" default>
-       `bash code --profile=cursorlessDevelopment`
+       ```bash
+        code --profile=cursorlessDevelopment
+        ```
      </TabItem>
      <TabItem value="vscodium" label="VSCodium">
-       `bash codium --profile=cursorlessDevelopment`
+       ```bash
+        codium --profile=cursorlessDevelopment
+        ```
      </TabItem>
    </Tabs>
 
@@ -43,10 +47,16 @@ Welcome! So glad you've decided to help make Cursorless better. You'll want to s
 
    <Tabs groupId="vsx">
      <TabItem value="vscode" label="VSCode">
-       ```bash pnpm init-vscode-sandbox```
+       ```bash
+        pnpm init-vscode-sandbox
+        ```
      </TabItem>
      <TabItem value="vscodium" label="VSCodium">
-       `bash pnpm init-vscode-sandbox --codium` VSCodium users will also need to
+       ```bash
+        pnpm init-vscode-sandbox --codium
+        ```
+
+      VSCodium users will also need to
        manually download and install the `jrieken:vscode-tree-sitter-query`
        extension, as it is [currently not
        avalible](https://github.com/jrieken/vscode-tree-sitter-query/issues/28)
@@ -64,12 +74,14 @@ Welcome! So glad you've decided to help make Cursorless better. You'll want to s
 
    <Tabs groupId="vsx">
      <TabItem value="vscode" label="VSCode">
-       `bash code --profile=cursorlessDevelopment --install-extension
-       some.extension`
+       ```bash
+        code --profile=cursorlessDevelopment --install-extension some.extension
+        ```
      </TabItem>
      <TabItem value="vscodium" label="VSCodium">
-       `bash codium --profile=cursorlessDevelopment --install-extension
-       some.extension`
+       ```bash
+        codium --profile=cursorlessDevelopment --install-extension some.extension
+        ```
      </TabItem>
    </Tabs>
 
@@ -138,11 +150,14 @@ Once you have your package then you can install it into the sandbox using the fo
 
 <Tabs groupId="vsx">
   <TabItem value="vscode" label="VSCode">
-    `bash code --profile=cursorlessDevelopment --install-extension bundle.vsix`
+    ```bash
+    code --profile=cursorlessDevelopment --install-extension bundle.vsix
+    ```
   </TabItem>
   <TabItem value="vscodium" label="VSCodium">
-    `bash codium --profile=cursorlessDevelopment --install-extension
-    bundle.vsix`
+    ```bash
+    codium --profile=cursorlessDevelopment --install-extension bundle.vsix
+    ```
   </TabItem>
 </Tabs>
 
