Apply suggestions from code review

--- a/packages/cursorless-org-docs/src/docs/user/release-notes/1.1.0.md
+++ b/packages/cursorless-org-docs/src/docs/user/release-notes/1.1.0.md
@@ -41,15 +41,15 @@ Every language Cursorless supports now uses our next-gen scope engine, enabling 
 - **Argument list scope**: Target the entire argument list of a function with `"arg list"` ([#2907](https://github.com/cursorless-dev/cursorless/pull/2907))
 - **Java record statements**: Java records now have proper scope support ([#3089](https://github.com/cursorless-dev/cursorless/pull/3089))
 - **Allow duplicate targets for bring**: You can now bring the same target multiple times ([#3083](https://github.com/cursorless-dev/cursorless/pull/3083))
-- **Move where destination contains source**: More flexible move action behavior ([#3056](https://github.com/cursorless-dev/cursorless/pull/3056))
-- **From action enabled by default** ([#2939](https://github.com/cursorless-dev/cursorless/pull/2939))
+- **`"move"` where destination contains source**: This now works ([#3056](https://github.com/cursorless-dev/cursorless/pull/3056))
+- **`"from"` action enabled by default** ([#2939](https://github.com/cursorless-dev/cursorless/pull/2939))
 - **Next/previous support for custom commands** ([#2969](https://github.com/cursorless-dev/cursorless/pull/2969))
 
 ### Documentation and visualization improvements
 
 The docs got some serious love this cycle:
 
-- **Scope test visualization**: The [language pages](https://www.cursorless.org/docs/user/languages) now show visualizations of scope tests, making it easier to understand exactly what each scope targets ([#3016](https://github.com/cursorless-dev/cursorless/pull/3016))
+- **Language-specific scope visualizations in docs**: The [language pages](https://www.cursorless.org/docs/user/languages) now show visualizations of what each scope looks like in each language, making it easier to understand exactly what each scope targets ([#3016](https://github.com/cursorless-dev/cursorless/pull/3016))
 - **Missing scopes contributor page**: A new page helps contributors identify which scopes are missing for each language ([#2978](https://github.com/cursorless-dev/cursorless/pull/2978))
 - **Containment icons in scope visualizer**: The scope visualizer now shows containment relationships with icons ([#3085](https://github.com/cursorless-dev/cursorless/pull/3085))
 
