Added screenshot of scope visualizer containment icons

--- a/packages/cursorless-org-docs/src/docs/user/release-notes/1.1.0.md
+++ b/packages/cursorless-org-docs/src/docs/user/release-notes/1.1.0.md
@@ -51,6 +51,7 @@ The docs got some serious love this cycle:
 - **Language-specific scope visualizations in docs**: The [language pages](https://www.cursorless.org/docs/user/languages) now show visualizations of what each scope looks like in each language, making it easier to understand exactly what each scope targets ([#3016](https://github.com/cursorless-dev/cursorless/pull/3016))
 - **Missing scopes contributor page**: A new page helps contributors identify which scopes are missing for each language ([#2978](https://github.com/cursorless-dev/cursorless/pull/2978))
 - **Containment icons in scope visualizer**: The scope visualizer now shows containment relationships with icons ([#3085](https://github.com/cursorless-dev/cursorless/pull/3085))
+  ![Scope visualizer](./sidebar-containment-icons.png)
 
 ### Interior scope improvements
 
