Added benchmark information

--- a/packages/cursorless-org-docs/src/docs/user/release-notes/1.1.0.md
+++ b/packages/cursorless-org-docs/src/docs/user/release-notes/1.1.0.md
@@ -61,7 +61,8 @@ We made significant improvements to interior scopes (the part of a scope between
 
 ### Performance improvements
 
-- Added scope handler cache for improved performance with multiple cursors ([#3101](https://github.com/cursorless-dev/cursorless/pull/3101))
+- Added scope handler cache for improved performance with multiple cursors ([#3101](https://github.com/cursorless-dev/cursorless/pull/3101))  
+  With a 10.000+ lines JSON-file and 100 cursors `"take key"` now takes about 20-25ms on a modern CPU.
 
 ### Bug fixes
 
