Added more testing to what's next

--- a/packages/cursorless-org-docs/src/docs/user/release-notes/1.1.0.md
+++ b/packages/cursorless-org-docs/src/docs/user/release-notes/1.1.0.md
@@ -73,6 +73,7 @@ We made significant improvements to interior scopes (the part of a scope between
 
 ## 📈 What's next?
 
+- **More testing**: We are still working to achieve full test coverage for all supported languages. This is an ongoing process as we discover previously untested areas or add new languages.
 - **Cursorless everywhere**: We're continuing work on bringing Cursorless to more editors and platforms.
 - **Documentation improvements**: We're always looking for [documentation contributions](https://github.com/cursorless-dev/cursorless/issues?q=is%3Aissue%20state%3Aopen%20label%3Adocumentation)
 
