--- a/packages/cursorless-org-docs/src/docs/user/release-notes/1.1.0.md
+++ b/packages/cursorless-org-docs/src/docs/user/release-notes/1.1.0.md
@@ -61,7 +61,7 @@ We made significant improvements to interior scopes (the part of a scope between
 
 ### Performance improvements
 
-- Added scope handler cache for improved performance with multiple cursors ([#3101](https://github.com/cursorless-dev/cursorless/pull/3101))  
+- Added scope handler cache for improved performance with multiple cursors ([#3101](https://github.com/cursorless-dev/cursorless/pull/3101))\
   With a 10,000+ line JSON file and 100 cursors, "take key" now takes about 20–25 ms on a modern CPU.
 
 ### Bug fixes
